--- a/module-gui/src/main/webapp/resources/uii/plugin_metadata_createStructureElements.xhtml
+++ b/module-gui/src/main/webapp/resources/uii/plugin_metadata_createStructureElements.xhtml
@@ -33,16 +33,16 @@
                         <h1 class="modal-title">#{msgs[Metadaten.extension.title]}</h1>
                         <button
                             type="button"
-                            class="close"
+                            class="close opacity-1"
                             data-dismiss="modal"
                             aria-label="Close">
-                            <span aria-hidden="true"> <h:outputText
+                            <span aria-hidden="true">
+                                <h:outputText
                                     value="&amp;times;"
                                     escape="false" />
                             </span>
                         </button>
                     </div>
-
                     <h:panelGroup
                         layout="block"
                         styleClass="modal-body"
@@ -92,7 +92,6 @@
                                     </div>
                                 </div>
                             </div>
-
                             <div class="form-group form-group--flex">
                                 <div class="row justify-content-between">
                                     <div class="col-3">
@@ -100,17 +99,14 @@
                                             styleClass="form-group__label"
                                             value="#{msgs.plugin_metadata_createElements_generateTitle}"
                                             title="#{msgs.plugin_metadata_createElements_generateTitle}" />
-
                                     </div>
-                                    <div class="col-9">
-
+                                    <div class="col-9 d-flex justify-content-start">
                                         <h:selectBooleanCheckbox
-                                            styleClass="form-control"
+                                            styleClass="form-select"
                                             value="#{Metadaten.extension.generateTitleFromFilename}" />
                                     </div>
                                 </div>
                             </div>
-
                             <div class="row">
                                 <div class="col-auto mr-auto"></div>
                                 <div class="col-auto">
@@ -121,7 +117,7 @@
 
                                     <h:commandButton
                                         id="absenden"
-                                        styleClass="btn btn--gray"
+                                        styleClass="btn btn--full"
                                         type="submit"
                                         action="#{Metadaten.extension.generateElements}"
                                         value="#{msgs.plugin_metadata_createElements_generateElements}"
@@ -130,11 +126,8 @@
                                     </h:commandButton>
                                 </div>
                             </div>
-
                         </h:form>
                     </h:panelGroup>
-
-
                 </h:panelGroup>
             </div>
         </h:panelGroup>
